# fish4tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildApiDoc.sh  buildUserDoc.sh
.github/workflows/: codeql-analysis.yml  codescan-analysis.yml
cmake/: Finddl.cmake  Findm.cmake
doxygen/: Doxyfile
include/: balancedTree.hpp  data.hpp  embedded.hpp  misc.hpp  treeNode.hpp  version.h.in
lib/: CMakeLists.txt
lib/fish4tools/: CMakeLists.txt
lib/fish4tools/data/: balancedTree.cc  node.cc
lib/fish4tools/embedded/: hex.cc
tests/: CMakeLists.txt
tests/fish4toolsLib/: CMakeLists.txt  gtest_main.cc  test_fish4toolsData.cc  test_fish4toolsDataBalancedTree.cc  test_fish4toolsDataTreeNode.cc
